# sugar-cli-cpp

./: CMakeLists.txt  tree.txt
src/: conversion.cpp  main.cpp
src/include/: conversion.cpp  conversion.hpp
test/: CMakeLists.txt  test_conversion.cpp
